build(review-queue): bugs fixes dark mode BREAKING CHANGE:

--- a/pages/review-queue/reviewqueue.module.scss
+++ b/pages/review-queue/reviewqueue.module.scss
@@ -124,7 +124,6 @@
                 }
                 .label {
                     font-size: 16px;
-                   
                     font-weight: 500;
                     line-height: 17px;
                     margin-bottom: 10px;
@@ -224,7 +223,7 @@
                     }
                     td {
                         font-size: 19px;
-                        color: rgba(17, 17, 17, 0.7);
+                        //color: rgba(17, 17, 17, 0.7);
                         font-weight: 500;
                         line-height: 24px;
                         padding: 15px 30px;
@@ -281,7 +280,6 @@
                     }
                     td {
                         font-size: 19px;
-                        color: rgba(17, 17, 17, 0.7);
                         font-weight: 500;
                         line-height: 24px;
                         padding: 15px 30px;
